_includes/manuals/1.3/4.2.5_param_classes.md

Parameterized Class Support (PCS) permits detecting, importing, and supplying parameters direct to classes which support it, via the ENC.

#### Requirements

* Foreman 1.1+
* Foreman-Proxy 1.1+
* Puppet 2.6.5+

#### Setup

Firstly, you'll need to enable the PCS support. Go to *More > Settings*, select
the Puppet tab, and ensure *Parameterized_Classes_in_ENC* is set to *true*.

![Settings](/static/images/screenshots/param_classes/settings.png)

Now you'll need to import some parameterized classes from your puppet master.
If you don't have any parameterized classes in your modules dir, the
foreman-installer has several, you can download a few modules from the Puppet
Forge. Once you have some parameterized modules, import your classes (see
[**4.2.2 Classes**](manuals/{{page.version}}/index.html#4.2.2Classes))

![Import](/static/images/screenshots/param_classes/import.png)

#### Configure a class

This example will work with the *foreman* class from the installer. Click on the class, and you should get a page with 3 tabs, like so:

![3 Tabs](/static/images/screenshots/param_classes/3tabs.png)

The middle tab, "Smart Class Parameter", is the important one. Click onto that, and you should see something like this:

![Edit](/static/images/screenshots/param_classes/edit.png)

On the left, we have a list of possible parameters that the class supports. On the right, we have the configuration options for the parameter selected.

Lets configure the *foreman* class to change the user the foreman processes run as. Select the *user* parameter, at the end of the list. Now lets go through the options:

* Puppet Environments / Name
   * These can't be edited, they're just for information.
* Description
   * Purely information textbox for making notes in. Not passed to puppet, or reused anywhere else
* Override (**important**)
   * If this is unchecked, Foreman will not attempt to control this variable, and it will not be passed to Puppet via the ENC.
* Type
   * The type of data we want to pass. Most commonly a string, but many other data types are supported. There's no easy way to tell what type of data puppet is expecting, so you will need to read through the code/documentation that comes with a particular module to find out. Changing the type field requires an appropriately set "Default Value" field.
* Default Value
   * This will be imported from puppet initially, but if puppet is using any class inheritance, you'll get something unhelpful like "${$foreman::params::user}". This is because Foreman won't follow the inheritance, so you'll need to set a sensible default value

Ok, so let's configure our *user* parameter. We want to tick Override, set type to "String" and set the default value to "foreman", like so:

![User Param](/static/images/screenshots/param_classes/user-param.png)

#### Setting up Matchers

We've configured the default, but that's not very useful. We need to be able to override the default for hosts or groups of hosts. To do that we need the "Override Value For Specific Hosts" section at the bottom of the page.

Let's say that any machine in the "development" puppet environment should use a value of "foremandev" instead of "foreman" for the "user" parameter. Add "environment" to the end of the matchers list, then click the "New Matcher-Value" button, and fill it out like this:

![Matcher](/static/images/screenshots/param_classes/matcher.png)

This is a basic configuration - for more complex examples of using matchers,
see the [**4.2.4 Smart Variables**](manuals/{{page.version}}/index.html#4.2.4SmartVariables) page.

#### Complex Data

Here's an example of adding an array parameter. Note the use of YAML in the editbox:

![Array](/static/images/screenshots/param_classes/array.png)

This will be converted to the normal ["a","b"] syntax when you save. You can also use Hashes, YAML or JSON as data types too.

#### Template Variables

Because Foreman offers templating capabilities, you can utilise pre-existing variables, macros and or functions within your parameterized classes. This is especially useful if you need to send a string to Puppet/Chef, but have a need to embed host specific information within the string, such as the host's FQDN.

Let's look a quick example situation: we need to configure RabbitMQ and have it use our existing Puppet SSL certs. Using what we've learnt above, we jump into the RabbitMQ class and configure the "ssl cert" parameter as such:

![Template Variable](/static/images/screenshots/param_classes/template-variable-rabbit-ssl-cert.png)

As you can see we're utilising a template variable within the parameter's string just like we would in a normal template file. The important part of this string, as we're sure you've gathered, is the "@host.name" element. This pulls the FQDN from Foreman's facts and inserts it into the string.

More information regarding templates can be found [**on the wiki**](http://projects.theforeman.org/projects/foreman/wiki/TemplateWriting). This page also contains the [**pre-existing functions and macros you can use in your templates and parameter classes.**](http://projects.theforeman.org/projects/foreman/wiki/TemplateWriting#Functions-and-macros)

#### Editing Param from within a Host

If Foreman manages the value of a class parameter ("override = true"), it's also possible to update a host-specific override from the host itself. That way you don't have to grant access to the Puppet Classes page to everyone. From a Host, click Edit, go to the Parameters tab, and you'll see the variable, the class-scope, and the current value. You can then override the value for that host:

![Host Edit](/static/images/screenshots/param_classes/hostedit.png)

If you go back and look at the Puppet class, you'll see Foreman has added a matcher for that host:

![Host Matcher](/static/images/screenshots/param_classes/hostmatch.png)

Currently this only works for Hosts, not Hostgroups. For more complex logic, like matching on facts, use the Puppet Class page

#### Input Validation

The "Optional Input Validator" section can be used to restrict the allowed values for the parameter. This functions in the same way as for **Smart Variables**, but it is important to note that the validation applies to changes made from the Host edit page as well as the Puppet Classes edit page.

For example, to restrict the "user" field to either "foreman" or "foremandev", tick the Required checkbox, and then set:

* Type: List
* Rule: foreman,foremandev
